# sandman

./: .buildinfo  README.md  cli.html  faq.html  genindex.html  index.html  installation.html  motivation.html  objects.inv  py-modindex.html  pyproject.toml  sandman.html  script.html  search.html  searchindex.js  setup.cfg
.github/workflows/: main.yml
_sources/: index.rst.txt
_static/: custom.css  documentation_options.js
docs/: cli.rst  conf.py  faq.rst  index.rst  installation.rst  motivation.rst  sandman.rst  script.rst
docs/_templates/: base.html
sandman/: __init__.py  __main__.py  obnoxious.py  progress.py  sandman.py
