[metadata]
name = sandman
version = attr: sandman.__version__
long_description = file: README.md
license = MIT
license_files = LICENSE

[options]
packages =
    sandman
python_requires = >=3.8
install_requires =
    numpy
    scipy>=0.15.0
    webcolors
    colorspacious
    pronounceable

[options.extras_require]
verbose =
    tqdm
visualize =
    Pillow
    matplotlib
docs =
    sphinx
    pygments
    hoverxref
    cmasher
    matplotlib
    furiosa @ git+https://github.com/emprice/furiosa.git@main

# vim: set ft=cfg:
